--- a/TetrisGame/MainWindow.xaml
+++ b/TetrisGame/MainWindow.xaml
@@ -5,8 +5,44 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TetrisGame"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="Tetris" Height="600" Width="800"
+        MinWidth="600" MinHeight="600"
+        Foreground="Red"
+        FontFamily="Segoe UI Light" FontSize="28"
+        KeyDown="Window_KeyDown">
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
 
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="auto"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+
+        <Viewbox Grid.Row="1" Grid.Column="1" Margin="0,0,0,20">
+            <Canvas x:Name="GridCanvas" Background="#101010" 
+                    Width="250" Height="510"
+                    ClipToBounds="True" Loaded="GridCanvas_Loaded"/>
+        </Viewbox>
+
+        <TextBlock x:Name="Score" Grid.Row="0" Grid.Column="1" Text="Score: "
+                   Margin="0, 10" TextAlignment="Center" Foreground="Black"/>
+
+        <StackPanel Grid.Row="1" Grid.Column="2" VerticalAlignment="Center" HorizontalAlignment="Left">
+            <TextBlock Text="Next Piece" TextAlignment="Center" Foreground="Black"/>
+            <Image x:Name="NextPieceImage" Margin="20" Width="125"/>
+        </StackPanel>
+
+        <Grid x:Name="GameOver" Background="Gray" Grid.RowSpan="2" Grid.ColumnSpan="3" Visibility="Hidden">
+            <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
+                <TextBlock Text="Game Over" FontSize="48" TextAlignment="Center"/>
+                <TextBlock x:Name="EndScoreText" Text="Score: " FontSize="40" TextAlignment="Center"/>
+                <Button Content="Restart Game?" Background="Green" Margin="0,20,0,0" Padding="5" Click="RestartGame_Click"/>
+            </StackPanel>
+        </Grid>
     </Grid>
 </Window>
+
